--- a/src/sentry/static/sentry/less/organization.less
+++ b/src/sentry/static/sentry/less/organization.less
@@ -781,8 +781,8 @@ table.project-list {
   }
 }
 
-.onboarding-progress-bar:hover, .onboarding-progress-bar.active {
-  background: rgba(255,255,255, .6);
+.onboarding-progress-bar:hover, .active .onboarding-progress-bar, .onboarding-progress-bar.active {
+  background: rgba(255,255,255, .3);
 }
 
 /**
